# Flashcards

./: CRUD.py  Flashcards.py  Intructions.md  README.md  TEST1 - inject_python_flashcards.py  TEST2 - flashcards_functions.py  common_authentificator.py  common_game.py  common_language.py  common_sqlite.py  common_streamlit.py  crud_cards.py  crud_stats.py  crud_themes.py  crud_users.py  flashcard.db  init.py  items_streamlit.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
pages/: 2_Manage_cards.py  3_Manage_themes.py
